--- a/coolstore/pom.xml
+++ b/coolstore/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>coolstore</artifactId>
 	<version>2.0.0</version>
 	<packaging>kjar</packaging>
-	<name>coolstore</name>
+	<name>Coolstore app demo</name>
 	<description>JBoss BRMS Coolstore project</description>
 
 	<properties>
@@ -21,7 +21,16 @@
 			<url>http://localhost:8080/business-central/maven2/</url>
 		</repository>
 	</repositories>
-	
+
+	<dependencies>
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-api</artifactId>
+			<version>${version.org.kie}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<pluginManagement>
 			<plugins>
